# OpenGLProject

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  run.sh
src/: CSGNode.cpp  IndexBuffer.cpp  IndexBuffer.h  RenderContext.cpp  RenderContext.h  Scene.cpp  Scene.h  ShaderProgram.cpp  ShaderProgram.h  VertexBuffer.cpp  main.cpp  types.h  util.cpp
src/headers/: CSGNode.h  RenderContext.h  Scene.h  VertexBuffer.h  types.h  util.h
src/shaders/: csg.frag  simple.frag  simple.vert
